PyMaker/datas/object2/RawHTML/i2901/Python_DOC_referPages.python3-pip-cannot-install-any-packages-also-cannot-update-pip-ubuntu.txt
<div class="post-text" itemprop="text">
<p>I tried</p>
<pre><code>sudo apt-get install python3
sudo apt-get install idle
sudo apt-get install python3-pip
</code></pre>
<p>then I try to install modules with pip, I tried several non work.</p>
<pre><code>pip install send2trash
Collecting send2trash
  Downloading https://files.pythonhosted.org/packages/13/2e/ea40de0304bb1dc4eb309de90aeec39871b9b7c4bd30f1a3cdcb3496f5c0/Send2Trash-1.5.0.tar.gz
Building wheels for collected packages: send2trash
  Running setup.py bdist_wheel for send2trash ... done
  Stored in directory: /home/joe/.cache/pip/wheels/f1/ca/e5/bdd5eae705cf50a483257e6ff9dd34911dda3570f0e1340dda
Successfully built send2trash
Installing collected packages: send2trash
Could not install packages due to an EnvironmentError: [Errno 13] Permission denied: '/usr/local/lib/python2.7/dist-packages/Send2Trash-1.5.0.dist-info'
Consider using the `--user` option or check the permissions.

You are using pip version 10.0.1, however version 18.0 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
</code></pre>
<p>So I tried upgrading pip ...</p>
<pre><code>sudo pip install --upgrade pip
Traceback (most recent call last):
  File "/usr/bin/pip", line 9, in &lt;module&gt;
    from pip import main
ImportError: cannot import name main
</code></pre>
<p>Apparently, I have some old python 2.7 on my computer. I am not using it. If the solution involves uninstalling that, it's okay by me.
Thanks in advance.</p>
<p>Also just tried sudo pip3 as I read in some instructions. Here's what I get now...</p>
<pre><code>sudo pip3 install beautifulSoup
[sudo] password for joe: 
The directory '/home/joe/.cache/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.
The directory '/home/joe/.cache/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.
Collecting beautifulSoup
  Downloading https://files.pythonhosted.org/packages/1e/ee/295988deca1a5a7accd783d0dfe14524867e31abb05b6c0eeceee49c759d/BeautifulSoup-3.2.1.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "&lt;string&gt;", line 1, in &lt;module&gt;
      File "/tmp/pip-build-p5xsk9e4/beautifulSoup/setup.py", line 22
        print "Unit tests have failed!"
                                      ^
    SyntaxError: Missing parentheses in call to 'print'

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/pip-build-p5xsk9e4/beautifulSoup/
You are using pip version 8.1.1, however version 18.0 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
</code></pre>
<p>Message says that /home/joe/.cache/pip/http is not owned by current user. That is so not true. My computer lies to me. This whole path all the way down is owned by me, user joe.</p>
<p>here is run with sudo pip ...</p>
<pre><code>sudo pip install beautifulSoup
Traceback (most recent call last):
  File "/usr/bin/pip", line 9, in &lt;module&gt;
    from pip import main
ImportError: cannot import name main
</code></pre>
<hr/>
<p>I ran ...</p>
<pre><code>sudo python3 -m pip install --upgrade pip
The directory '/home/joe/.cache/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.
The directory '/home/joe/.cache/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.
Collecting pip
  Downloading https://files.pythonhosted.org/packages/5f/25/e52d3f31441505a5f3af41213346e5b6c221c9e086a166f3703d2ddaf940/pip-18.0-py2.py3-none-any.whl (1.3MB)
    100% |████████████████████████████████| 1.3MB 553kB/s 
Installing collected packages: pip
  Found existing installation: pip 8.1.1
    Not uninstalling pip at /usr/lib/python3/dist-packages, outside environment /usr
Successfully installed pip-8.1.1
You are using pip version 8.1.1, however version 18.0 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
</code></pre>
<p>This seemed to work. But then I ran sudo pip3 and sudo pip ...</p>
<pre><code>sudo pip3 install beautifulSoup
Traceback (most recent call last):
  File "/usr/local/bin/pip3", line 7, in &lt;module&gt;
    from pip._internal import main
ImportError: No module named 'pip._internal'

sudo pip install beautifulSoup
Traceback (most recent call last):
  File "/usr/local/bin/pip", line 7, in &lt;module&gt;
    from pip._internal import main
ImportError: No module named 'pip._internal'
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Ok, first let's fix your Pip install:</p>
<pre><code>sudo apt-get install --reinstall python3-pip
</code></pre>
<p>Now you should be able to run <code>pip3 --version</code> to check that Pip is installed and working properly. If not, let me know before you try anything else.</p>
<p>Key points to note:</p>
<ul>
<li>When running Pip outside a virtualenv, you'll need to use <code>pip3</code>, otherwise your system will try to use Python 2's Pip.</li>
<li>If you ever need to run Pip as root, it's best to use <code>sudo -H</code> rather than just <code>sudo</code> – this will fix the warnings about <code>The directory ... is not owned by the current user</code>.</li>
</ul>
<hr/>
<p>If you want to install Pip 18, I would recommend doing so in a virtualenv – upgrading the system Pip is fraught with things that can go wrong.</p>
<p>e.g.:</p>
<pre><code># Create a new virtualenv:
python3 -m venv my_virtual_environment
# "Activate" it (you need to do this once per shell)
source my_virtual_environment/bin/activate
# Now you can use `pip`, `python` etc. and the changes will be kept in the `my_virtual_environment` directory
pip install -U pip setuptools wheel
</code></pre>
<p>Also, to install BeautifulSoup, you need the <code>beautifulsoup4</code> package – <code>beautifulSoup</code> is old and doesn't work with Python 3:</p>
<pre><code>pip install beautifulsoup4
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You are receiving the error </p>
<blockquote>
<p>Could not install packages due to an EnvironmentError: [Errno 13]
  Permission denied:
  '/usr/local/lib/python2.7/dist-packages/Send2Trash-1.5.0.dist-info'</p>
</blockquote>
<p>because you are running pip install under a normal user.</p>
<p>You can either run this same command with <code>sudo pip install 'packagename'</code>. This will give you root privileges when installing, or you can check out running this in a virtualenv. You can read up more on virtualenv at <a href="https://docs.python.org/3/tutorial/venv.html" rel="nofollow noreferrer">here</a>.</p>
</div>
<span class="comment-copy">Try using <code>python3 -m pip install ...</code> to install packages. And as far as I recollect you get <code>pip3</code> when you install python. So you can install packages with <code>pip3 install ...</code></span>
<span class="comment-copy">You can try using <code>pip3</code>, not <code>pip</code> for Python3, as <code>pip</code> might refer to Python2 which is still on your system.</span>
<span class="comment-copy"><b>sudo python3 -m pip install --upgrade pip</b></span>
<span class="comment-copy">I would do yourself a favor and dump python 2.7 off your computer.  I suspect down the road you are going to run into other weird stuff with packages having similar problems.</span>
<span class="comment-copy">Is uninstalling python 2.7 really a good idea? Per this thread ... <a href="https://askubuntu.com/questions/187227/i-run-sudo-apt-get-remove-python2-7-can-i-restore-my-ubuntu-now#199435" title="i run sudo apt get remove python2 7 can i restore my ubuntu now%23199435">askubuntu.com/questions/187227/…</a> and from this thread <a href="https://stackoverflow.com/questions/44602191/how-to-completely-uninstall-python-2-7-13-on-ubuntu-16-04" title="how to completely uninstall python 2 7 13 on ubuntu 16 04">stackoverflow.com/questions/44602191/…</a></span>
<span class="comment-copy">Hi Josh, @Josh Installed python3-pip with no incident. Unfortunately, I get this on pip3 --version:  ` pip3 --version Traceback (most recent call last):   File "/usr/local/bin/pip3", line 7, in &lt;module&gt;     from pip._internal import main ImportError: No module named 'pip._internal'`</span>
<span class="comment-copy">Hmm. Can you run <code>sudo mv /usr/local/bin/pip{,.old}</code> and <code>sudo mv /usr/local/bin/pip3{,.old}</code> and see if it works then?</span>
<span class="comment-copy">Thank you, I just caught that too. I added into post, what happens with sudo pip3. and sudo pip.</span>
